	  option was added to limit the amount of SRAM used for packet buffering and to
	  re-use any extra Bank0 memory for heap.  configs/olimex-lpc1766stk/nettest
	  now uses only 8Kb at the beginning of Bank0; the 8Kb at the end of Bank0 is
	  included in the heap
	* arch/arm/src/lpc17xx/lpc17_ssp.c -- Fix compilation errors when SSP1 is
	  selected.
	* configs/olimex-lpc1766stk/nsh -- Enable network and SD/MMC card support in
	  NSH.  Networking and telnetd interface functional.  Still testing SPI-based
	  SD/MMC.
	* examples/nsh/nsh_netinit.c -- Fix NSH bug.  If CONFIG_NET is selected, but
	  CONFIG_EXAMPLES_NSH_TELNETD is not selected, then the network is never
      initialized and bad things happen if you try to ping.
	* drivers/lcd -- Add header files for the Phillips PCF8833 LCD controller and
	  for the Epson S1D15G10 LCD controller.  A driver for the Nokia 6100 LCD is
	  coming.
	* include/nuttx/spi.h and almost all other SPI files -- Added an optional
	  cmddata() method to the SPI interface.  Some devices require and additional
	  out-of-band bit to specify if the next word sent to the device is a command
	  or data. This is typical, for example, in "9-bit" displays where the 9th bit
	  is the CMD/DATA bit. The cmddata method provides selection of command or data.
	* drivers/lcd/p14201.c -- Now uses the cmddata() method of the SPI interface.
	* arch/arm/src/lpc17xx/lpc17_usbdev.c -- LPC17xx USB driver now appears to
	  to be fully functional.  examples/usbstorage configuration verified (the
	  examples/usbserial configuration is untested).
	* drivers/usbdev/usbserial.c and usbstorage.c -- All USB class drivers need
	  to call DEV_CONNECT() when they are ready to be enumerated.  That is,
	  (1) initially when bound to the USB driver, and (2) after a USB reset.
	* drivers/lcd/nokia6100.c -- A driver for the Nokia 6100 LCD.
	* configs/olimex-lpc1766stk/nx -- A NX graphics configuration for the Olimex
	  LPC1766-STK board using the Nokia 6100 LCD driver.