@@ -160,7 +160,7 @@
  ****************************************************************************/
 
 #define SPI_SETBITS(d,b) \
-  do { if ((d)->ops->setbits) (d)->ops->setmode(d,b); } while (0)
+  do { if ((d)->ops->setbits) (d)->ops->setbits(d,b); } while (0)
 
 /****************************************************************************
  * Name: SPI_STATUS
